# api/swagger/swagger.yaml
@@ -53,6 +53,42 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  
+  /event:
+    x-swagger-router-controller: events
+    post:
+      description: Add new event
+      # used as the method name of the controller
+      operationId: addEvent
+      parameters:
+        - name: event
+          description: Pass all mandatory fields event date, start time, end time, title, publish status
+          in: body
+          required: true
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/CreateEventInput"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/CreateEventResponse"
+        "401":
+          description: Unauthorized Error
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UnauthorizedError"
+        "500":
+          description: Server Error
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ServerError"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 
   /member:
     # binds a127 app logic to a route
@@ -478,6 +514,71 @@ definitions:
     required:
       - error
       - token
+  CreateEventInput:
+    type: object
+    properties:
+      date:
+        type: string
+        description: Event date
+      start:
+        type: string
+        description: Event start time
+      end:
+        type: string
+        description: Event end time
+      title:
+        type: string
+        description: Event Title
+      description: 
+        type: ['string','null']
+        description: Event Description
+      publish:
+        type: integer
+        description: Event publish status
+      status:
+        type: integer
+        description: Event status
+    required:
+      - date
+      - title
+  CreateEventResponse:
+    required:
+      - error
+      - event
+    properties:
+      error:
+        type: boolean
+      event:
+          type: object
+          properties:
+            id:
+              type: string
+              description: Masjid event Id
+            month:
+              type: string
+              description: First Three Digit of Month i.e. Jan 
+            day:
+              type: string
+              description: Day of Month i.e. 27
+            start:
+              type: ['string','null']
+              description: Event start time
+            end: 
+              type: string
+              description: Event end time
+            title:
+              type: string
+              description: Event short description.
+            desc:
+              type: ['string','null']
+              description: Event description.
+            publish:
+              type: integer
+              description: Event publish status
+            status:
+              type: string
+              description: event active status
+              
   UnauthorizedError:
     properties:
       error:
